--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap');
 
 * {
     margin: 0;
@@ -202,48 +202,182 @@ body {
     display: flex;
 
     .exp-nav {
-        width: 102px;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-
-        &:hover {
-            .exp-nav-img {
-                background-color:rgba(227, 219, 29, 0.20);
-                border: 2px solid $Color4;
-                border-bottom: none;
-                backdrop-filter: blur(7.5px);
-            }
-            @for $i from 1 through 8 {
-                .exp-nav-esp#{$i} {
-                  background-color:rgba(227, 219, 29, 0.20);
-
-                  border: calc(2px + (0.1px * calc($i * calc($i/3)) )) solid $Color4;
-                  border-top: none;
-                  border-bottom: none;
-                }
-            }
-
-        }
-    }
-
-    .exp-nav-img {
         width: 86px;
         height: 92px;
+        margin: 0 16px;
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 8px 8px 0 0;
+        
+
+        &:hover {
+            background-color:rgba(227, 219, 29, 0.20);
+            border: 2px solid $Color4;
+            border-bottom: none;
+            backdrop-filter: blur(7.5px);
+            z-index: 5;
+            &::before {
+                content: '';
+                width: 50px;
+                height: 50px;
+                position: absolute;
+                border-radius: 0 0 8px 0;
+                border: 2px solid $Color4;
+                border-left: none;
+                border-top: none;
+                margin-left: -134px;
+                margin-bottom: -38px;
+                z-index: 1;
+            }
+            
+            &::after {
+                content: '';
+                width: 50px;
+                height: 50px;
+                position: absolute;
+                border-radius: 0 0 0 8px;
+                border: 2px solid $Color4;
+                border-right: none;
+                border-top: none;
+                margin-right: -134px;
+                margin-bottom: -38px;
+                z-index: 1;
+            }
+        }
+
     }
 
 }
 
-@for $i from 1 through 8 {
-    .exp-nav-esp#{$i} {
-      height: 0.5px;
-      width: calc(86px + (0.5px * calc($i * calc($i/3)) ));
+.experiencia-info {
+    width: 100%;
+    height: 83%;
+    padding: 24px;
+    border: 2px $Color4 solid;
+    border-radius: 8px;
+    background-color:rgba(227, 219, 29, 0.20);
+    z-index: 1;
+    margin-top: -2px;
+    display: grid;
+    grid-template-rows: min-content;
+}
+
+.experiencia-top {
+    display: flex;
+    align-items: center;
+
+    div {
+        height: 64px;
+        display: flex;
+        align-items: center;
+    }
+
+    .exp-titulo {
+        font-size: 32px;
+        border-right: 2px solid $Color4;
+        padding-right: 40px;
+        h2 {
+            width: fit-content;
+            min-width: 230px;
+            font-weight: 400;
+        }
+    }
+
+    .exp-puesto {
+        font-size: 20px;
+        font-weight: 300;
+        min-width: 200px;
+        color: $Color4;
+        border-right: 2px solid $Color4;
+        padding: 0 40px;
+    }
+
+    .exp-fecha {
+        font-size: 20px;
+        font-weight: 300;
+        color: $Color4;
+        max-width: 220px;
+        padding: 0 20px 0 60px;
+        line-height: 24px;
     }
 }
+
+.experiencia-descr {
+    padding: 20px 24px;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    li {
+        margin: 4px 0;
+        line-height: normal;
+        font-family: 'Roboto';
+    }
+}
+
+.expSub-cont {
+    width: 100%;
+    padding-left: 3%;
+    height: 30vh;
+    margin-bottom: 12px;
+    align-self: flex-end;
+    display: grid;
+    grid-template-columns: 1fr 1.25fr 1.1fr;
+
+    .expSub-col {
+        border-right: 2px dashed $Color4;
+        .expSub-tittle {
+            width: 100%;
+            display: flex;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 300;
+            color: $Color4;
+            justify-content: center;
+            align-items: center;
+            svg {
+                font-size: 32px;
+                margin-right: 16px;
+            }
+        }
+        .expSub-list {
+            font-family: 'Roboto';
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+        }
+    }
+
+    .expSub-col-1 {
+        .expSub-tittle {
+            margin-left: -24px;
+        }
+        .expSub-list {
+            padding: 16px 14px;
+        }
+    }
+
+    .expSub-col-2 {
+        width: 100%;
+        .expSub-list {
+            width: 80%;
+            padding: 16px;
+            margin: 0 auto;
+            display: flex;
+            gap: 12px;
+        }
+    }
+
+    .expSub-col-3 {
+        border-right: none;
+        .expSub-list {
+            padding: 16px 38px;
+            padding-right: 0;
+        }
+    }
+}
+
 
 /* ############# Contenido Principal - Portafolio ############# */
 .lista-trabajos {
