--- a/src/app/style.css
+++ b/src/app/style.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: 0.3s all;
 }
 
 /* ############# Variables ############# */
@@ -121,6 +122,102 @@ body {
 
 .sujeto {
   margin-top: 6%;
+}
+
+/* ############# Contenido Principal - Portafolio ############# */
+.Portafolio {
+  width: 100%;
+  height: 100%;
+  padding: 24px 24px 24px 5%;
+}
+
+.lista-trabajos {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  margin-bottom: 8%;
+}
+.lista-trabajos div {
+  width: 86px;
+  height: 81px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #09143C;
+}
+.lista-trabajos .active-trab {
+  background-color: #FA2F4C;
+}
+
+.trabajo {
+  width: 100%;
+}
+.trabajo .trabajo-cont {
+  display: flex;
+  margin-bottom: 8%;
+}
+.trabajo .trabajo-cont .trabajo-img {
+  display: flex;
+  width: 400px;
+  margin-right: 40px;
+  justify-content: center;
+}
+.trabajo .info-trabajo {
+  height: 285px;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.trabajo .info-trabajo h2 {
+  font-size: 32px;
+  color: #E3DB1D;
+  font-weight: 400;
+  margin-bottom: 24px;
+}
+.trabajo .info-trabajo p {
+  width: 80%;
+  font-size: 14px;
+  font-family: "Roboto";
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 12px;
+}
+.trabajo .info-trabajo button {
+  width: -moz-fit-content;
+  width: fit-content;
+  border: none;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  color: #FFFFFF;
+  border-radius: 8px;
+  background: var(--color-1, #09143C);
+  box-shadow: 0px 6px 10px 0px rgba(252, 97, 94, 0.35);
+  padding: 12px 16px;
+  align-self: flex-end;
+}
+
+.trabajo-detalles {
+  display: flex;
+  width: 100%;
+  padding: 8px 12px 4px 12px;
+  justify-content: space-between;
+  border: 2px #E3DB1D solid;
+  border-radius: 16px;
+  background-color: rgba(227, 219, 29, 0.2);
+}
+.trabajo-detalles p {
+  line-height: normal;
+  font-family: "Roboto";
+  font-size: 14px;
+}
+.trabajo-detalles .tr-titulo {
+  color: #E3DB1D;
+  font-family: "Oswald";
+  font-size: 20px;
+}
+.trabajo-detalles img {
+  width: 24px;
+  height: 24px;
 }
 
 /* ############# Contenido Principal - SobreMi ############# */
@@ -638,123 +735,6 @@ body {
   color: #E3DB1D;
 }
 
-/* ############# Contenido Principal - Portafolio ############# */
-.lista-trabajos {
-  height: 100%;
-  width: 100%;
-  padding-left: 70px;
-  padding-bottom: 40px;
-  display: flex;
-}
-
-.trabajo {
-  transition: 0.3s all;
-  align-self: flex-end;
-  margin-right: 42px;
-}
-.trabajo .trabajo-cont {
-  width: 207px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.trabajo .trabajo-cont-img {
-  width: 141px;
-  height: 146px;
-  border-radius: 50%;
-  background-color: #FFB27A;
-  margin: 0 0 -130px 0;
-  z-index: 1;
-}
-.trabajo .trabajo-detalles {
-  background-color: #D9D9D9;
-  width: 100%;
-  height: 217px;
-  border-radius: 16px;
-}
-.trabajo .trabajo-detalles div {
-  display: none;
-}
-.trabajo .info-trabajo {
-  display: none;
-}
-
-.viendo-trabajo {
-  transition: 0.3s all;
-  align-self: flex-start;
-}
-.viendo-trabajo .trabajo-cont {
-  width: 341px;
-}
-.viendo-trabajo .trabajo-cont-img {
-  width: 263px;
-  height: 273px;
-  margin: 24px 0;
-}
-.viendo-trabajo .trabajo-detalles {
-  color: black;
-  padding: 35px 42px;
-  height: initial;
-}
-.viendo-trabajo .trabajo-detalles div {
-  display: block;
-  padding-bottom: 60px;
-}
-.viendo-trabajo .info-trabajo {
-  display: block;
-  position: relative;
-  margin-top: -720px;
-  margin-left: 26vw;
-  max-width: 15vw;
-  z-index: 3;
-}
-.viendo-trabajo .info-trabajo h2 {
-  margin-bottom: 28px;
-}
-.viendo-trabajo .info-trabajo p {
-  font-size: 16px;
-  font-weight: 300;
-  line-height: normal;
-}
-.viendo-trabajo .info-trabajo button {
-  background-color: #E3DB1D;
-  padding: 8px 16px;
-  color: #000;
-  font-size: 32px;
-  border-radius: 8px;
-  margin-top: 8px;
-}
-
-.trabajo-left {
-  margin-left: -200px;
-}
-
-.portafolio-bt-D {
-  position: fixed;
-  height: 100%;
-  width: 8vw;
-  right: -10px;
-  top: 0;
-  bottom: 0;
-  background: linear-gradient(270deg, #09143C 15.16%, rgba(9, 20, 60, 0.1) 153.19%);
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
-  z-index: 2;
-}
-.portafolio-bt-D button {
-  height: 100%;
-  background-color: transparent;
-  width: 80px;
-  border: 0;
-  display: flex;
-}
-.portafolio-bt-D button svg {
-  align-self: flex-end;
-  margin: 24px auto;
-  color: #D9D9D9;
-  font-size: 2em;
-}
-
 /* ############# Contenido Principal - Referencias ############# */
 .referecias {
   width: 100%;
@@ -762,12 +742,21 @@ body {
   padding: 7% 10% 0 10%;
 }
 
-.referencias-list {
+.refencias-cont {
   width: 100%;
+  height: 200px;
+  overflow: scroll;
+  scrollbar-width: none;
+}
+
+.referencias-list {
+  width: 200%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 24px;
+  margin-left: 34%;
+  margin-right: 34%;
 }
 .referencias-list div {
   background-color: #D9D9D9;
@@ -775,6 +764,9 @@ body {
   width: 100px;
   height: 100px;
   opacity: 0.6;
+}
+.referencias-list div img {
+  width: 100%;
 }
 .referencias-list .activo {
   width: 200px;
