--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: 0.3s all;
 }
 
 /* ############# Variables ############# */
@@ -130,6 +131,103 @@ body {
     margin-top: 6%;
 }
 
+/* ############# Contenido Principal - Portafolio ############# */
+.Portafolio {
+    width: 100%;
+    height: 100%;
+    padding: 24px 24px 24px 5%;
+}
+
+.lista-trabajos {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+    margin-bottom: 8%;
+    div {
+        width: 86px;
+        height: 81px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $Color1;
+    }
+    .active-trab {
+        background-color: $Color3;
+    }
+}
+
+.trabajo {
+    width: 100%;
+
+    .trabajo-cont {
+        display: flex;
+        margin-bottom: 8%;
+        .trabajo-img {
+            display: flex;
+            width: 400px;
+            margin-right: 40px;
+            justify-content: center;
+        }
+
+    }
+    .info-trabajo {
+        height: 285px;
+        display: grid; 
+        grid-template-columns: 1fr;
+        h2{
+            font-size: 32px;
+            color: $Color4;
+            font-weight: 400;
+            margin-bottom: 24px;
+        }
+        p{
+            width: 80%;
+            font-size: 14px;
+            font-family: "Roboto";
+            font-weight: 400;
+            line-height: normal;
+            margin-bottom: 12px;
+        }
+        button {
+            width: fit-content;
+            border: none;
+            font-size: 32px;
+            font-style: normal;
+            font-weight: 400;
+            color: $Color2;
+            border-radius: 8px;
+            background: var(--color-1, #09143C);
+            box-shadow: 0px 6px 10px 0px rgba(252, 97, 94, 0.35);
+            padding: 12px 16px;
+            align-self: flex-end;
+            
+        }
+    }
+}
+
+.trabajo-detalles {
+    display: flex;
+    width: 100%;
+    padding: 8px 12px 4px 12px;
+    justify-content: space-between;
+    border: 2px $Color4 solid;
+    border-radius: 16px;
+    background-color: rgba(227, 219, 29, 0.2);
+    p {
+        line-height: normal;
+        font-family: 'Roboto';
+        font-size: 14px;
+    }
+    .tr-titulo {
+        color: $Color4;
+        font-family: 'Oswald';
+        font-size: 20px;
+    }
+    img {
+        width: 24px;
+        height: 24px;
+    }
+}
 /* ############# Contenido Principal - SobreMi ############# */
 .SobreMi {
     width: 100%;
@@ -658,149 +756,35 @@ body {
     }
 }
 
-/* ############# Contenido Principal - Portafolio ############# */
-.lista-trabajos {
-    height: 100%;
-    width: 100%;
-    padding-left: 70px;
-    padding-bottom: 40px;
-    display: flex;
-}
-
-.trabajo {
-    transition: 0.3s all;
-    align-self: flex-end;
-    margin-right: 42px;
-    .trabajo-cont {
-        width: 207px; 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .trabajo-cont-img {
-        width: 141px;
-        height: 146px;
-        border-radius: 50%;
-        background-color: $Color5;
-        margin: 0 0 -130px 0;
-        z-index: 1;
-    }
-
-    .trabajo-detalles {
-        background-color: $Color6;
-        width: 100%;
-        height: 217px;
-        border-radius: 16px;
-        div {
-            display: none;
-        }
-    }
-
-    .info-trabajo {
-        display: none;
-    }
-}
-
-.viendo-trabajo {
-    transition: 0.3s all;
-    align-self: flex-start;
-    .trabajo-cont {
-        width: 341px; 
-    }
-
-    .trabajo-cont-img {
-        width: 263px;
-        height: 273px;
-        margin: 24px 0;
-    }
-
-    .trabajo-detalles {
-        color: black;
-        padding: 35px 42px;
-        height: initial;
-        div {
-            display: block;
-            padding-bottom: 60px;
-        }
-    }
-
-    .info-trabajo {
-        display: block;
-        position: relative;
-        margin-top: -720px;
-        margin-left: 26vw;
-        max-width: 15vw;
-        z-index: 3;
-        h2{
-            margin-bottom: 28px;
-        }
-        p {
-            font-size: 16px;
-            font-weight: 300;
-            line-height: normal;
-        }
-        button {
-            background-color: #E3DB1D;
-            padding: 8px 16px;
-            color: #000;
-            font-size: 32px;
-            border-radius: 8px;
-            margin-top: 8px;
-        }
-    }
-}
-
-.trabajo-left {
-    margin-left: -200px;
-}
-
-.portafolio-bt-D {
-    position: fixed;
-    height: 100%;
-    width: 8vw;
-    right: -10px;
-    top: 0;
-    bottom: 0;
-    background: linear-gradient(270deg, #09143C 15.16%, rgba(9, 20, 60, 0.10) 153.19%);
-    backdrop-filter: blur(5px);
-    z-index: 2;
-    button {
-        height: 100%;
-        background-color: transparent;
-        width: 80px;
-        border: 0;
-        display: flex;
-        svg {
-            align-self: flex-end;
-            margin: 24px auto;
-            color: $Color6;
-            font-size: 2em;
-
-        }
-        
-    }
-}
-
 /* ############# Contenido Principal - Referencias ############# */
 .referecias {
     width: 100%;
     height: 100%;
-    padding: 7% 10% 0 10%  
+    padding: 7% 10% 0 10%;  
+}
+
+.refencias-cont {
+    width: 100%;
+    height: 200px;
+    overflow: scroll;
+    scrollbar-width: none;
 }
 
 .referencias-list {
-    width: 100%;
+    width: 200%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 24px;
+    margin-left: 34%;
+    margin-right: 34%;
     div {
         background-color: $Color6;
         border-radius: 50%;
         width: 100px;
         height: 100px;
         opacity: 0.6;
+        img {width: 100%;}
     }
     .activo {
         width: 200px;
