--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -75,11 +75,13 @@ body {
 }
 
 .Nav-Botones {
+    cursor: pointer;
     width: 100%;
     padding: 16px 24px;
     display: flex;
     text-decoration: none;
     button {
+        cursor: pointer;
         background-color: transparent;
         color: $Color2;
         font-size: 32px;
@@ -88,13 +90,16 @@ body {
     img {
         margin-right: 24px;
     }
+    &:hover {
+        box-shadow: inset 0px 0px 0px 2px #fa2f4d85, 0px 0px 5px 0px #fa2f4d85;
+    }
 }
 
 .Links {
     margin-left: 24%;
     font-size: 16px;
     p {
-        margin-bottom: 8px;
+        margin-bottom: 4px;
         svg {margin-right: 8px;}
     }
 }
@@ -103,6 +108,7 @@ body {
 .Cont-Principal {
     width: 74.74%;
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     overflow: scroll;
 
@@ -122,6 +128,12 @@ body {
     }
 }
 
+.home {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
 .img-sujeto {
     height: 80vh;
     margin-top: 10%;
@@ -136,9 +148,11 @@ body {
     width: 100%;
     height: 100%;
     padding: 24px 24px 24px 5%;
+    animation: upDown 0.3s 1 forwards;
 }
 
 .lista-trabajos {
+    cursor: pointer;
     display: flex;
     flex-wrap: wrap;
     gap: 12px;
@@ -157,6 +171,7 @@ body {
 }
 
 .trabajo {
+    animation: rightCenter 0.3s 1 forwards;
     width: 100%;
 
     .trabajo-cont {
@@ -166,7 +181,7 @@ body {
             display: flex;
             width: 400px;
             margin-right: 40px;
-            justify-content: center;
+            align-items: center;
         }
 
     }
@@ -232,6 +247,8 @@ body {
 .SobreMi {
     width: 100%;
     display: flex;
+    animation: upDown 0.3s 1 forwards;
+
 }
 
 .SobreMi-nav {
@@ -245,6 +262,7 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
         p {
             font-size: 20px;
             font-weight: 400;
@@ -278,7 +296,9 @@ body {
     display: flex;
     width: 100%;
     align-items: flex-end;
+    cursor: pointer;
     button {
+        cursor: pointer;
         display: flex;
         align-items: center;
         width: 15%;
@@ -761,6 +781,7 @@ body {
     width: 100%;
     height: 100%;
     padding: 7% 10% 0 10%;  
+    animation: upDown 0.3s 1 forwards;
 }
 
 .refencias-cont {
@@ -784,9 +805,11 @@ body {
         width: 100px;
         height: 100px;
         opacity: 0.6;
+        cursor: pointer;
         img {width: 100%;}
     }
     .activo {
+        cursor: default;
         width: 200px;
         height: 200px;
         opacity: 1;
@@ -797,6 +820,7 @@ body {
     font-size: 20px;
     font-weight: 300;
     margin-bottom: 36px;
+    height: 140px;
 }
 
 form {
@@ -840,6 +864,9 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transform: translateY(-100%);
+    animation: upDown 0.3s 0.2s 1 forwards;
+    
 }
 
 .servicios-list {
@@ -918,10 +945,43 @@ form {
         background: var(--color-1, #09143C);
         box-shadow: 0px 4px 15px 0px rgba(252, 97, 94, 0.35);
         padding: 8px;
+        cursor: pointer;
+        
     }
 }
 
 /* ############# Clases Comunes ############# */
 .displayNone {
     display: none;
+}
+
+.centerDown {
+    animation: centerDown 0.3s 0.05s 1 forwards;
+}
+
+@keyframes centerDown {
+    0% {
+        transform: translateY(0%);
+    }
+    100% {
+        transform: translateY(130%);
+    }
+}
+
+@keyframes rightCenter {
+    0% {
+        transform: translateX(130%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+@keyframes upDown {
+    0% {
+        transform: translateY(-100%);
+    }
+    100% {
+        transform: translateY(0%);
+    }
 }
